; ModuleID = '/home/carl/AnghaBench/git/builtin/extr_worktree.c_delete_git_work_tree.c'
source_filename = "/home/carl/AnghaBench/git/builtin/extr_worktree.c_delete_git_work_tree.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.strbuf = type { i32 }
%struct.worktree = type { i32 }

@STRBUF_INIT = common dso_local global %struct.strbuf zeroinitializer, align 4
@.str = private unnamed_addr constant [22 x i8] c"failed to delete '%s'\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.worktree*)* @delete_git_work_tree to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @delete_git_work_tree(%struct.worktree* %0) #0 {
  %2 = alloca %struct.worktree*, align 8
  %3 = alloca %struct.strbuf, align 4
  %4 = alloca i32, align 4
  store %struct.worktree* %0, %struct.worktree** %2, align 8
  %5 = bitcast %struct.strbuf* %3 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 4 %5, i8* align 4 bitcast (%struct.strbuf* @STRBUF_INIT to i8*), i64 4, i1 false)
  store i32 0, i32* %4, align 4
  %6 = load %struct.worktree*, %struct.worktree** %2, align 8
  %7 = getelementptr inbounds %struct.worktree, %struct.worktree* %6, i32 0, i32 0
  %8 = load i32, i32* %7, align 4
  %9 = call i32 @strbuf_addstr(%struct.strbuf* %3, i32 %8)
  %10 = call i64 @remove_dir_recursively(%struct.strbuf* %3, i32 0)
  %11 = icmp ne i64 %10, 0
  br i1 %11, label %12, label %17

12:                                               ; preds = %1
  %13 = call i32 @_(i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str, i64 0, i64 0))
  %14 = getelementptr inbounds %struct.strbuf, %struct.strbuf* %3, i32 0, i32 0
  %15 = load i32, i32* %14, align 4
  %16 = call i32 @error_errno(i32 %13, i32 %15)
  store i32 -1, i32* %4, align 4
  br label %17

17:                                               ; preds = %12, %1
  %18 = call i32 @strbuf_release(%struct.strbuf* %3)
  %19 = load i32, i32* %4, align 4
  ret i32 %19
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #1

declare dso_local i32 @strbuf_addstr(%struct.strbuf*, i32) #2

declare dso_local i64 @remove_dir_recursively(%struct.strbuf*, i32) #2

declare dso_local i32 @error_errno(i32, i32) #2

declare dso_local i32 @_(i8*) #2

declare dso_local i32 @strbuf_release(%struct.strbuf*) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
